# DDML

./: .buildinfo  .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  Makefile  README.md  dead_peer.Dockerfile  genindex.html  index.html  interactive_peer.html  normal_peer.Dockerfile  objects.inv  peer.Dockerfile  peer.html  protocol.html  pyproject.toml  run.yml  search.html  searchindex.js  setup.cfg  test_ci.Dockerfile  utils.html  worker.html
.github/workflows/: docs.yml  main.yml  tests.yml
_sources/: interactive_peer.rst.txt  utils.rst.txt  worker.rst.txt
ddml/: __init__.py  main.py
ddml/peers/: interactive_peer.py  peer.py  protocol.py
ddml/peers/dead/: dead_peer.py
ddml/peers/normal/: normal_peer.py
ddml/tests/peers/: test_dead_peer.py  test_normal_peer.py  test_one_dead_peer.py  test_one_dead_peer.yml  test_peer.py
ddml/tests/peers/integration/: test_alive_peers.py  test_alive_peers.yml  test_new_peer_join.py  test_new_peer_join.yml  test_one_dead_peer.py  test_one_dead_peer.yml
ddml/tests/utils/: test_worker.py
ddml/utils/: asserts.py  colors.py  utils.py  worker.py
doc/: report.bib  report.tex
doc/source/: index.rst  interactive_peer.rst  worker.rst
docs/: conf.py  index.rst  peer.rst  protocol.rst
docs/source/: conf.py  peer.rst
report/: report.tex
src/: dead_peer.Dockerfile  normal_peer.Dockerfile  run.yml  test-dead-peer.yml  test-dead-peers.py  test-peer.py  test_dead_peer.yml  test_dead_peers.py  test_peer.py
src/peer/: dead-peer.Dockerfile  dead-peer.py  normal-peer.Dockerfile  normal-peer.py  peer.py
src/peers/: dead_peer.py  normal_peer.py
