[tool.poetry]
name = "ddml"
version = "0.1.0"
description = "Train machine learning models in a distributed and decentralized way."
authors = ["Filippo Barbari <filippo.barbari@studio.unibo.it>"]

[tool.poetry.dependencies]
python = "^3.9"
testcontainers = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
