[tool.poetry]
name = "ddml"
version = "0.1.0"
description = "Train machine learning models in a distributed and decentralized way."
authors = ["Filippo Barbari <filippo.barbari@studio.unibo.it>"]

[tool.poetry.dependencies]
python = "^3.7"
pynput = "^1.7.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
testcontainers = "^3.5.3"
pytest-cov = "^3.0.0"
black = "^22.3.0"
mutmut = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
