[tool.poetry]
name = "ddml"
version = "0.1.0"
description = "Train machine learning models in a distributed and decentralized way."
authors = ["Filippo Barbari <filippo.barbari@studio.unibo.it>"]

[tool.poetry.dependencies]
python = "^3.7"
pynput = "^1.7.6"
scikit-learn = "^1.0.2"
skl2onnx = "^1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
testcontainers = "^3.5.3"
pytest-cov = "^3.0.0"
black = "^22.3.0"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
pylint = "^2.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
